--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,13 +30,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
 
-      - name: Setup mdBook
-        uses: peaceiris/actions-mdbook@v1
-        with:
-          mdbook-version: '0.4.15'
+    #   - name: Setup mdBook
+    #     uses: peaceiris/actions-mdbook@v1
+    #     with:
+    #       mdbook-version: '0.4.15'
 
-      - name: Build Docs
-        run: mdbook build
+    #   - name: Build Docs
+    #     run: mdbook build
       - uses: JamesIves/github-pages-deploy-action@4.1.7
         with:
           branch: gh-pages # The branch the action should deploy to.
