--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,14 +30,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
 
-    #   - name: Setup mdBook
-    #     uses: peaceiris/actions-mdbook@v1
-    #     with:
-    #       mdbook-version: '0.4.15'
+      - name: Setup mdBook
+        uses: peaceiris/actions-mdbook@v1
+        with:
+          mdbook-version: '0.4.15'
 
-    #   - name: Build Docs
-    #     run: mdbook build
-      - uses: JamesIves/github-pages-deploy-action@4.1.7
+      - name: Build Docs
+        run: mdbook build
+
+      - name: Deploy to gh-pages  
+        uses: JamesIves/github-pages-deploy-action@4.1.7
         with:
           branch: gh-pages # The branch the action should deploy to.
           folder: dist # The folder the action should deploy.
