style: the shit out of it

--- a/book.toml
+++ b/book.toml
@@ -1,18 +1,23 @@
 [book]
+title = "Pop!_OS Documentation"
 authors = ["System76"]
+description = "The example book covers examples."
+src = "docs"
 language = "en"
 multilingual = true
-src = "docs"
-title = "Pop!_OS Documentation"
 
 [build]
----create-missing = false
----use-default-preprocessors = false
+create-missing = false
+use-default-preprocessors = true
 build-dir = "dist"
 
-
 [output.html]
----theme = "static"
----additional-css = ["static/docs.css", "static/minimal.common.css"]
----git-repository-url = "https://github.com/pop-os/docs"
----git-repository-icon = "fa-github"
+cname = "docs.pop-os.org"
+default-theme = "light"
+preferred-dark-theme = "midnight"
+additional-css = ["theme/css/fonts.css", "theme/css/colors.css"]
+additional-js = ["theme/main.js"]
+git-repository-url = "https://github.com/pop-os/docs"
+git-repository-icon = "fa-github"
+edit-url-template = "https://github.com/pop-os/docs/edit/master/{path}"
+input-404 = "not-found.md"
