--- a/book.toml
+++ b/book.toml
@@ -12,7 +12,7 @@ use-default-preprocessors = true
 build-dir = "dist"
 
 [output.html]
-cname = "docs.pop-os.org"
+--cname = "docs.pop-os.org"
 default-theme = "light"
 preferred-dark-theme = "midnight"
 additional-css = ["theme/css/fonts.css", "theme/css/colors.css"]
