feat: Rewrite theme

--- a/book.toml
+++ b/book.toml
@@ -14,9 +14,7 @@ build-dir = "dist"
 [output.html]
 --cname = "docs.pop-os.org"
 default-theme = "light"
-preferred-dark-theme = "midnight"
-additional-css = ["theme/css/fonts.css", "theme/css/colors.css"]
-additional-js = ["theme/main.js"]
+preferred-dark-theme = "dark"
 git-repository-url = "https://github.com/pop-os/docs"
 git-repository-icon = "fa-github"
 edit-url-template = "https://github.com/pop-os/docs/edit/master/{path}"
