Jacob and Aaron's suggestions, minus webm conversion and LFT storage

--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,5 @@
 *.ttf filter=lfs diff=lfs merge=lfs -text
 *.woff filter=lfs diff=lfs merge=lfs -text
 *.woff2 filter=lfs diff=lfs merge=lfs -text
+.webm filter=lfs diff=lfs merge=lfs -text
+.gif filter=lfs diff=lfs merge=lfs -text
