--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,13 +12,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Build Docs
-        run: mdbook build
-      
-      - name: Setup mdBook
+      - name: Set Up mdBook
         uses: peaceiris/actions-mdbook@v1
         with:
           mdbook-version: 'latest'
+
+      - name: Build Docs
+        run: mdbook build
         
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
